@@ -36,6 +36,7 @@ import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.ObjectStreamField;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.HashMap;
@@ -452,7 +453,8 @@ public final class TemplatesImpl implements Templates, Serializable {
 
             // The translet needs to keep a reference to all its auxiliary
             // class to prevent the GC from collecting them
-            AbstractTranslet translet = (AbstractTranslet) _class[_transletIndex].newInstance();
+            AbstractTranslet translet = (AbstractTranslet)
+                    _class[_transletIndex].getConstructor().newInstance();
             translet.postInitialization();
             translet.setTemplates(this);
             translet.setOverrideDefaultParser(_overrideDefaultParser);
@@ -463,13 +465,10 @@ public final class TemplatesImpl implements Templates, Serializable {
 
             return translet;
         }
-        catch (InstantiationException e) {
+        catch (InstantiationException | IllegalAccessException |
+                NoSuchMethodException | InvocationTargetException e) {
             ErrorMsg err = new ErrorMsg(ErrorMsg.TRANSLET_OBJECT_ERR, _name);
-            throw new TransformerConfigurationException(err.toString());
-        }
-        catch (IllegalAccessException e) {
-            ErrorMsg err = new ErrorMsg(ErrorMsg.TRANSLET_OBJECT_ERR, _name);
-            throw new TransformerConfigurationException(err.toString());
+            throw new TransformerConfigurationException(err.toString(), e);
         }
     }
 
